sandbox/output
NumberParserTest.java:22: error: method should_set_delimiter_convert_string_array_to_int() is already defined in class NumberParserTest
    public void should_set_delimiter_convert_string_array_to_int() {
                ^
1 error
